# FBPINNs

./: .gitignore  COLAB_INSTRUCTIONS.md  COLAB_SETUP_README.md  README.md  colab_setup.py  quick_test.py  test_biot_simple.py  test_colab_setup.ipynb
fbpinns/: __init__.py  analysis.py  networks.py  (+6 more)
poroelasticity/: BOUNDARY_CONDITION_ANALYSIS.md  COLAB_POROELASTICITY_GUIDE.md  CORRECTIONS_SUMMARY.py  PROJECT_STRUCTURE.md  README.md  README_DATA_TRAINER.md  SOLUTION_SUMMARY.md  __init__.py  biot_trainer.py  biot_trainer_data.py  boundary_condition_analysis.py  corrected_exact_solution.py  debug_training_demo.py  example_data_trainer.py  flow_trainer.py  mechanics_trainer.py  pyproject.toml  requirements.txt  run_all_validations.py  run_test.py  setup_path.py  simple_validation.py  test_biot.py  test_boundary_conditions.py  test_data_trainer.py  test_fixed_solution.py  test_vtk_data.py
poroelasticity/Data_2D/: displacement_MSAMPLE2D_RES_S0_M.vtk  displacement_MSAMPLE2D_RES_S100_MHm.vtk  matrix_pressure_MSAMPLE2D_RES_S100_Hm.vtk  matrix_pressure_MSAMPLE2D_RES_S100_MHm.vtk
poroelasticity/Notebooks/: base_model.ipynb  coupled_model.ipynb
poroelasticity/notebooks/: Biot_Visualization.ipynb  Biot_Visualization_Hub.ipynb
poroelasticity/test/: test_biot_2d.py  test_biot_2d_data.py
poroelasticity/trainers/: __init__.py  base_model.py  base_model_copy.py  biot_trainer_2d copy.py  biot_trainer_2d.py  biot_trainer_2d_data.py  biot_trainer_2d_fixed.py  biot_trainer_2d_no_exact_solu.py  coupled_model.py
poroelasticity/utilities/: validation_metrics.py  visualization_tools.py
(+1 files in other folders)
