[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poroelasticity"
version = "1.0.0"
authors = [{name = "Ogechi Cynthia Eze"}]
description = "Coupled poroelasticity simulations for CO2 storage using FBPINNs"
readme = "README.md"
requires python = ">=3.8"
dependencies = [
    "jax>=0.4.8",
    "numpy>=1.24.2",
    "matplotlib>=3.7.1",
    "scipy>=1.10.1",
    "optax>=0.1.4",
]